--- a/0-Project/docs/IA048-Proposta_Projeto-Gabriel_Toffanetto/IA048-Proposta_Projeto-Gabriel_Toffanetto.tex
+++ b/0-Project/docs/IA048-Proposta_Projeto-Gabriel_Toffanetto/IA048-Proposta_Projeto-Gabriel_Toffanetto.tex
@@ -72,9 +72,9 @@
 
 \section*{Segmentação Semântica de Imagens para Percepção de \\Veículos Autônomos}
 
-Para que um robô possa se locomover pelo ambiente de forma autônoma, é preciso que ele tenha a capacidade de perceber o local onde está inserido, para poder interagir com ele de forma coerente. No contexto da navegação urbana de veículos autônomos, o veículo deve ser capaz de identificar no ambiente o que é rua, calçada, pedestres, postes, árvores, outros veículos, etc., com principal objetivo de diferir o que é área navegável do que são obstáculos. Existem muitos métodos e sensores que podem ser utilizados para tal tarefa, como por exemplo LiDARs e radares. Contudo, de forma mais natural, a câmera é o sensor que mais se aproxima da maneira como nós, humanos, percebemos o mundo. Assim, a utilização de imagens leva ao problema de definir, na matriz de pixels que as formam, a qual classe cada um deles pertence, realizando assim uma segmentação semântica da imagem, onde, além de detectar quais entidades estão presentes na cena, define-se com precisão onde elas estão e o espaço que preenchem.
+Para que um robô possa se locomover pelo ambiente de forma autônoma, é preciso que ele tenha a capacidade de perceber o local onde está inserido, para poder interagir com ele de forma coerente. No contexto da navegação urbana de veículos autônomos, o veículo deve ser capaz de identificar no ambiente o que é rua, calçada, pedestres, postes, árvores, outros veículos, etc., com principal objetivo de diferir o que é área navegável do que são obstáculos. Existem muitos métodos e sensores que podem ser utilizados para tal tarefa, como por exemplo LiDARs e radares. Contudo, de forma mais natural, a câmera é o sensor que mais se aproxima da maneira como nós, humanos, percebemos o mundo. Assim, a utilização de imagens leva ao problema de definir, na matriz de pixels que as formam, a qual classe cada um deles pertence, realizando assim uma segmentação semântica da imagem, onde, além de detectar quais entidades estão presentes na cena, define-se com precisão onde elas estão e o espaço que ocupam no campo visual.
 
-Dessa forma, propõe-se a utilização de algoritmos de Machine Learning, baseados em redes neurais profundas, para realizar, por meio de aprendizado supervisionado, a segmentação semântica de imagens de cenas urbanas, com foco em problemas de navegação de veículos autônomos. Dentre as tecnologias a serem utilizadas, citam-se as \textit{Fully Convolutional Networks} (FCNs) e os \textit{Autoencoders}, além de outras propostas de sucesso da literatura para tal aplicação. Além disso, devido à atividade custosa de criar rótulos para esse tipo de problema, pretende-se analisar a relevância do uso de \textit{Self-Supervised Learning} (SSL) para o pré-treino da rede neural profunda, sendo assim requisitadas menos amostras rotuladas do problema-alvo.
+Dessa forma, propõe-se a utilização de algoritmos de Machine Learning, baseados em redes neurais profundas, para realizar, por meio de aprendizado supervisionado, a segmentação semântica de imagens de cenas urbanas, com foco em problemas de navegação de veículos autônomos. Dentre as tecnologias a serem utilizadas, citam-se as \textit{Fully Convolutional Networks} (FCNs) e os \textit{Autoencoders}, além de outras propostas de sucesso da literatura para tal aplicação. Além disso, devido à atividade custosa de criar rótulos para esse tipo de problema, pretende-se analisar a relevância do uso de \textit{Self-Supervised Learning} (SSL) para o pré-treino da rede neural profunda, sendo assim demandando menos amostras rotuladas do problema-alvo.
 
 
 
