--- a/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
+++ b/0-Project/docs/IA048-Projeto_Final-Gabriel_Toffanetto/IA048-Projeto_Final-Gabriel_Toffanetto.tex
@@ -11,7 +11,7 @@
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
 
-\title{\huge{Métodos de \textit{Deep Learning} aplicados à Segmentação Semântica de Imagens para Percepção de Veículos Autônomos}
+\title{\huge{Métodos de \textit{Deep Learning} aplicados\cite{jebamikyousAutonomousVehiclesPerception2022} à Segmentação Semântica de Imagens para Percepção de Veículos Autônomos}
 }
 
 \author{\IEEEauthorblockN{Gabriel Toffanetto França da Rocha}
